--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -9,7 +9,7 @@
 
 include-file = modules.ini
 [colors]
-background = #24273a
+background = #181926
 foreground = #cad3f5
 black = #494d64
 white = #b8c0e0
@@ -20,9 +20,9 @@ purple = #f5bde6
 cyan = #8db5ca
 gray = #b8c0e0 
 
+border = #363a4f
 mauve = #c6a0f6
 peach = #f5a97f
-darker = #181926
 
 [bar/bar1]
 monitor = DP-3
@@ -38,35 +38,25 @@ foreground = ${colors.white}
 
 line-size = 1pt
 
-border-bottom-size = 1
-border-color = ${colors.black}
+border-bottom-size = 2
+border-color = ${colors.border}
 
-padding = 0
-
+padding = 1
 module-margin = 0
-
-# separator = 
-# separator-foreground = ${colors.highlight}
 
 font-0 = "Hack Nerd Font Mono:size=12;2"
 font-1 = "Hack Nerd Font Mono:size=26;5"
 font-2 = "Hack Nerd Font Mono:size=20;5"
 font-3 = "Hack Nerd Font Mono:size=16;3"
 
-modules-left = date spacer firefox obsidian files xkeyboard left
-modules-center = i3
-modules-right = right 1space game spacer spotify-prev spotify-play spotify-next spacer audio pulseaudio spacer powermode spacer powermenu
+modules-left = i3 spacer firefox obsidian files xkeyboard
+modules-center = date
+modules-right = 1space game spacer spotify-prev spotify-play spotify-next spacer audio pulseaudio spacer powermode spacer powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
-
-; wm-restack = generic
-wm-restack = bspwm
-; wm-restack = i3
-
-; override-redirect = true
 
 [bar/bar2]
 monitor = DP-1
@@ -83,30 +73,22 @@ foreground = ${colors.white}
 line-size = 1pt
 
 
-border-bottom-size = 1
-border-color = ${colors.black}
+border-bottom-size = 2
+border-color = ${colors.border}
 
+padding = 1
 module-margin = 0
-
-;separator = 
-;separator-foreground = ${colors.red}
 
 font-0 = "Hack Nerd Font Mono:size=12;2"
 font-1 = "Hack Nerd Font Mono:size=26;5"
 font-2 = "Hack Nerd Font Mono:size=20;5"
 font-3 = "Hack Nerd Font Mono:size=16;3"
 
-modules-left = 1space filesystem spacer memory spacer cpu spacer temperature spacer updates-arch 1space left
-modules-center = i3
-modules-right = right 1space tray spacer date 1space
+modules-left = i3 spacer tray
+modules-center = date
+modules-right = updates-arch spacer temperature spacer cpu spacer memory spacer filesystem
 
 cursor-click = pointer
 cursor-scroll = ns-resize
 
 enable-ipc = true
-
-; wm-restack = generic
-wm-restack = bspwm
-; wm-restack = i3
-
-; override-redirect = true
