--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -9,22 +9,6 @@
 #              █░▀░█ █▄█ █▄▀ █▄█ █▄▄ ██▄ ▄█                 #
 #############################################################
 
-[module/left]
-type = custom/script
-exec = echo ""
-format = <label>
-format-foreground = ${colors.darker}
-format-background = ${colors.background}
-format-font = 2
-
-[module/right]
-type = custom/script
-exec = echo ""
-format = <label>
-format-foreground = ${colors.darker}
-format-background = ${colors.background}
-format-font = 2
-
 ;================================
 ;   Workspaces & Windows 
 ;================================
@@ -33,42 +17,42 @@ format-font = 2
 type = internal/i3
 pin-workspaces = true
 
-ws-icon-0 = 1;󰬺
-ws-icon-1 = 2;󰬻
-ws-icon-2 = 3;󰬼
-ws-icon-3 = 4;󰬽
+# ws-icon-0 = 1;󰬺
+# ws-icon-1 = 2;󰬻
+# ws-icon-2 = 3;󰬼
+# ws-icon-3 = 4;󰬽
 
-ws-icon-4 = 5;󰬾
-ws-icon-5 = 6;󰬿
-ws-icon-6 = 7;󰭀
-ws-icon-7 = 8;󰭁
+# ws-icon-4 = 5;󰬾
+# ws-icon-5 = 6;󰬿
+# ws-icon-6 = 7;󰭀
+# ws-icon-7 = 8;󰭁
 
-# ws-icon-0 = 1;󰎤
-# ws-icon-1 = 2;󰎧
-# ws-icon-2 = 3;󰎪
-# ws-icon-3 = 4;󰎭
+ws-icon-0 = 1;󰎤
+ws-icon-1 = 2;󰎧
+ws-icon-2 = 3;󰎪
+ws-icon-3 = 4;󰎭
 
-# ws-icon-4 = 5;󰎱
-# ws-icon-5 = 6;󰎳
-# ws-icon-6 = 7;󰎶
-# ws-icon-7 = 8;󰎹
+ws-icon-4 = 5;󰎱
+ws-icon-5 = 6;󰎳
+ws-icon-6 = 7;󰎶
+ws-icon-7 = 8;󰎹
 
 label-focused = %icon%
 label-focused-foreground = ${colors.blue}
-label-focused-font = 4
+label-focused-font = 2
 
 
 label-unfocused = %icon%
 label-unfocused-foreground = ${colors.black}
-label-unfocused-font = 4
+label-unfocused-font = 2
 
 label-visible = %icon%
 label-visible-foreground = ${colors.black}
-label-visible-font = 4
+label-visible-font = 2
 
 label-urgent = %icon%
 label-urgent-foreground = ${colors.purple}
-label-urgen-font = 4
+label-urgent-font = 2
 
 label-separator = " "
 
@@ -76,7 +60,7 @@ label-separator = " "
 type = internal/xwindow
 label-padding = 2
 label = %title:0:30:...%
-label-foreground = ${colors.yellow}
+label-foreground = ${colors.peach}
 
 ;================================
 ;   System Monitoring 
@@ -91,7 +75,7 @@ format-prefix-font = 3
 format-prefix-foreground = ${colors.blue}
 format-prefix-background = ${colors.darker}
 label = %output%
-label-foreground = ${colors.yellow}
+label-foreground = ${colors.peach}
 label-background = ${colors.darker}
 interval = 600
 click-left = exec ~/.config/polybar/scripts/pacman.sh
@@ -103,8 +87,9 @@ warn-temperature=75
 format = <ramp> <label>
 format-warn = <ramp> <label-warn>
 format-background = ${colors.darker}
+ramp-font = 4
 label = %temperature-c%
-label-foreground = ${colors.yellow}
+label-foreground = ${colors.peach}
 label-warn-foreground = ${colors.purple}
 ramp-0 = ""
 ramp-1 = ""
@@ -120,7 +105,7 @@ format-prefix = ""
 format-prefix-foreground = ${colors.blue}
 format-prefix-font = 3
 label = %percentage:2%%
-label-foreground = ${colors.yellow}
+label-foreground = ${colors.peach}
 
 [module/memory]
 type = internal/memory
@@ -130,7 +115,7 @@ format-prefix = " "
 format-prefix-foreground = ${colors.blue}
 format-prefix-font = 3
 label = %used%
-label-foreground = ${colors.yellow}
+label-foreground = ${colors.peach}
 
 [module/filesystem]
 type = internal/fs
@@ -142,7 +127,7 @@ format-mounted-prefix-foreground = ${colors.blue}
 format-mounted-prefix-background = ${colors.darker}
 format-mounted-prefix-font = 3
 label-mounted = %percentage_used%%
-label-mounted-foreground = ${colors.yellow}
+label-mounted-foreground = ${colors.peach}
 label-mounted-background = ${colors.darker}
 
 ;================================
@@ -157,7 +142,7 @@ format-volume-prefix-background = ${colors.darker}
 format-volume = <label-volume>
 
 label-volume = %percentage%%
-label-volume-foreground = ${colors.yellow}
+label-volume-foreground = ${colors.peach}
 label-volume-background = ${colors.darker}
 
 format-muted-prefix = " "
@@ -165,7 +150,7 @@ format-muted-prefix-background = ${colors.darker}
 format-muted-prefix-font = 3
 label-muted = 
 label-muted-font = 3
-label-muted-foreground = ${colors.yellow}
+label-muted-foreground = ${colors.peach}
 label-muted-background = ${colors.darker}
 label-muted-padding-right = 1
 
@@ -193,7 +178,7 @@ type = custom/script
 interval = 1
 format = <label>
 exec = ~/.config/polybar/scripts/song-playing.sh
-format-foreground = ${colors.yellow}
+format-foreground = ${colors.peach}
 
 [module/spotify-prev]
 type = custom/script
@@ -202,6 +187,7 @@ format = <label>
 click-left = spotify_player playback previous
 format-foreground = ${colors.blue}
 format-background = ${colors.darker}
+format-font = 4
 
 [module/spotify-play]
 type = custom/script
@@ -211,6 +197,7 @@ click-left = spotify_player playback play-pause
 click-right = ~/.config/polybar/scripts/spotifyd-reload.sh
 format-foreground = ${colors.blue}
 format-background = ${colors.darker}
+format-font = 4
 
 [module/spotify-next]
 type = custom/script
@@ -219,6 +206,7 @@ format = <label>
 click-left = spotify_player playback next
 format-foreground = ${colors.blue}
 format-background = ${colors.darker}
+format-font = 4
 
 ;================================
 ;   Launchers
@@ -280,14 +268,14 @@ click-left = "#game.hook.1"
 label-background = ${colors.darker}
 
 [module/powermode]
-type = custom/script
+type = custom/ipc
+format = <label>
 label = "%output%"
-label-foreground = ${colors.blue}
-label-background = ${colors.darker}
 label-font = 3
-interval = 2.0
-exec = ~/.config/polybar/scripts/power-mode.sh
-click-left = ~/.config/polybar/scripts/power-mode.sh swap &
+initial = 1
+hook-0 = ~/.config/polybar/scripts/power-mode.sh
+hook-1 = ~/.config/polybar/scripts/power-mode.sh swap &
+click-left = "#powermode.hook.1"
 
 [module/tray]
 type = internal/tray
@@ -303,8 +291,7 @@ interval = 1
 date = " %a, %h %d - %I:%M"
 
 label = %date%
-label-foreground = ${colors.blue}
-label-background = ${colors.darker}
+label-foreground = ${colors.peach}
 
 [module/xkeyboard]
 type = internal/xkeyboard
@@ -319,37 +306,17 @@ label-indicator-on-capslock = -Caps Lock-
 type = custom/script
 exec = echo " ⏽ "
 format = <label>
-format-foreground = ${colors.red}
-format-background = ${colors.darker}
-
-[module/1space]
-type = custom/script
-exec = echo " "
-format = <label>
-format-background = ${colors.darker}
-
-[module/3space]
-type = custom/script
-exec = echo "   "
-format = <label>
-format-background = ${colors.darker}
-
-[module/1spaceb]
-type = custom/script
-exec = echo " "
-format = <label>
+format-foreground = ${colors.border}
+label-font = 4
 
 [module/powermenu]
 type = custom/menu
 
 format-foreground = ${colors.blue}
 format-background = ${colors.darker}
-label-open-padding-right = 1
-label-close-padding-right = 1
-
 
 label-open = "⏻"
-label-foreground = ${colors.yellow}
+label-foreground = ${colors.peach}
 label-open-font = 4
 label-close = ""
 label-close-foreground = ${colors.blue}
@@ -359,19 +326,18 @@ separator-foreground = ${colors.red}
 label-separator-foreground = ${colors.red}
 expand-right = false
 
-
 ; reboot
 menu-0-1 = " Reboot"
 menu-0-1-exec = systemctl reboot
-menu-0-1-foreground = ${colors.yellow}
+menu-0-1-foreground = ${colors.peach}
 ; shutdown
 menu-0-0 = " Shutdown"
 menu-0-0-exec = systemctl poweroff
-menu-0-0-foreground = ${colors.yellow}
+menu-0-0-foreground = ${colors.peach}
 ; sleep
 menu-0-2 = "⏾ Sleep"
 menu-0-2-exec = systemctl suspend
-menu-0-2-foreground = ${colors.yellow}
+menu-0-2-foreground = ${colors.peach}
 
 [settings]
 screenchange-reload = true
