--- a/archbook/hypr/hyprland.conf
+++ b/archbook/hypr/hyprland.conf
@@ -28,7 +28,7 @@ monitor=,1920x1080,auto,1
 
 # Set programs that you use
 $terminal = wezterm
-$fileManager = nemo
+$fileManager = thunar
 $menu = wofi --show drun
 
 #############################
