--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -137,13 +137,14 @@ type = custom/ipc
 label = "%output%"
 label-font = 4
 label-foreground = ${colors.blue}
-label-background = ${colors.darker}
 initial = 1
-hook-0 = ~/.config/polybar/scripts/audio.sh
+hook-0 = ~/.config/polybar/scripts/audio.sh get &
 hook-1 = ~/.config/polybar/scripts/audio.sh swap &
-hook-2 = exec pavucontrol &
+hook-2 = ~/.config/polybar/scripts/audio.sh reset &
+hook-3 = exec pavucontrol &
 click-left = "#audio.hook.1"
-click-right = "#audio.hook.2"
+click-middle = "#audio.hook.2"
+click-right = "#audio.hook.3"
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -259,7 +260,6 @@ initial = 1
 hook-0 = ~/.config/polybar/scripts/game.sh
 hook-1 = ~/.config/polybar/scripts/game.sh game &
 click-left = "#game.hook.1"
-label-background = ${colors.darker}
 
 [module/powermode]
 type = custom/ipc
@@ -292,6 +292,7 @@ type = internal/xkeyboard
 format = <label-indicator>
 format-foreground = ${colors.background}
 format-background = ${colors.red}
+format-padding = 1
 
 label-indicator-on = %icon%
 label-indicator-on-capslock = -Caps Lock-
