--- a/archbook/waybar/config.jsonc
+++ b/archbook/waybar/config.jsonc
@@ -4,6 +4,10 @@
   "modules-left": [
     "clock",
     "hyprland/workspaces",
+    "custom/divider",
+    "custom/firefox",
+    "custom/obsidian",
+    "custom/files",
   ],
   "modules-right": [
     "custom/pacman",
@@ -20,10 +24,40 @@
     "idle_inhibitor",
     "custom/power"
   ],
+  "hyprland/workspaces": {
+    "format": "{icon}",
+    "format-icons": {
+      "1": "󰎤",
+      "2": "󰎧",
+      "3": "󰎪",
+      "4": "󰎭",
+      "5": "󰎱",
+      "6": "󰎳",
+      "7": "󰎶",
+      "8": "󰎹",
+      "9": "󰎼",
+      "10": "󰽽",
+    },
+  },
+  "custom/divider": {
+    "format": "⏽",
+  },
+  "custom/firefox": {
+    "format": "",
+    "on-click": "firefox",
+  },
+  "custom/obsidian": {
+    "format": "",
+    "on-click": "obsidian",
+  },
+  "custom/files": {
+    "format": " ",
+    "on-click": "thunar",
+  },
   "custom/pacman": {
     "interval": 180,
     "exec": "checkupdates | wc -l",
-    "format": "<span foreground='#eed49f'></span> {}"
+    "format": "{} <span foreground='#8aadf4'></span>"
   },
   "clock": {
     "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
@@ -31,7 +65,7 @@
   },
   "pulseaudio": {
     // "scroll-step": 1, // %, can be a float
-    "format": "{volume}% <span foreground='#eed49f'>{icon}</span>",
+    "format": "{volume}% <span foreground='#8aadf4'>{icon}</span>",
     "format-bluetooth": "{volume}% {icon} {format_source}",
     "format-bluetooth-muted": " {icon} {format_source}",
     "format-source": "{volume}% ",
@@ -49,28 +83,28 @@
     // "hwmon-path": "/sys/class/hwmon/hwmon2/temp1_input",
     "critical-threshold": 80,
     // "format-critical": "{temperatureC}°C {icon}",
-    "format": "{temperatureC}°C <span foreground='#eed49f'>{icon}</span>",
+    "format": "{temperatureC}°C <span foreground='#8aadf4'>{icon}</span>",
     "format-icons": ["", "", ""],
     "tooltip": false
   },
   "cpu": {
-    "format": "{usage}% <span foreground='#eed49f'> </span>",
+    "format": "{usage}% <span foreground='#8aadf4'> </span>",
   },
   "memory": {
-    "format": "{used}GB <span foreground='#eed49f'> </span>",
+    "format": "{used}GB <span foreground='#8aadf4'> </span>",
     "tooltip": false
   },
   "disk": {
-    "format": "{percentage_used}% <span foreground='#eed49f'>󰋊</span>"
+    "format": "{percentage_used}% <span foreground='#8aadf4'>󰋊</span>"
     },
   "backlight": {
-    "format": "{percent}% <span foreground='#eed49f'>{icon}</span>",
+    "format": "{percent}% <span foreground='#8aadf4'>{icon}</span>",
     "format-icons": ["", "", "", "", "", "", "", "", ""],
     "tooltip": false
   },
   "network": {
     // "interface": "wlp2*", // (Optional) To force the use of this interface
-    "format-wifi": "{essid} ({signalStrength}%) <span foreground='#eed49f'> </span>",
+    "format-wifi": "{essid} ({signalStrength}%) <span foreground='#8aadf4'> </span>",
     "tooltip-format": "{ifname} via {gwaddr} ",
     "format-linked": "{ifname} (No IP) ",
     "format-disconnected": "Disconnected ⚠",
@@ -82,7 +116,7 @@
         "warning": 30,
         "critical": 15
     },
-    "format": "{capacity}% <span foreground='#eed49f'>{icon} </span>",
+    "format": "{capacity}% <span foreground='#8aadf4'>{icon} </span>",
     "format-full": "{capacity}% {icon}",
     "format-charging": "{capacity}% ",
     "format-plugged": "{capacity}% ",
@@ -104,7 +138,7 @@
     }
   },
   "custom/power": {
-    "format" : "  ⏻  ",
+    "format": "  ⏻  ",
     "on-click": "wlogout -b 5"
-  }
+  },
 }
