--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -213,8 +213,7 @@ exec = echo " "
 format = <label>
 label-font = 3
 # label-padding-left = 1
-format-foreground = ${colors.blue}
-format-background = ${colors.darker}
+format-foreground = ${colors.foreground}
 click-left = firefox
 
 [module/obsidian]
@@ -222,8 +221,7 @@ type = custom/script
 exec = echo " "
 format = <label>
 label-font = 3
-format-foreground = ${colors.blue}
-format-background = ${colors.darker}
+format-foreground = ${colors.foreground}
 click-left = obsidian
 
 [module/files]
@@ -231,8 +229,7 @@ type = custom/script
 exec = echo " "
 format = <label>
 label-font = 3
-format-foreground = ${colors.blue}
-format-background = ${colors.darker}
+format-foreground = ${colors.foreground}
 click-left = thunar
 
 ;================================
