--- a/archbook/hypr/hyprland.conf
+++ b/archbook/hypr/hyprland.conf
@@ -125,6 +125,10 @@ gestures {
     workspace_swipe = true
 }
 
+cursor {
+  no_hardware_cursors = true
+}
+
 device {
     name = logi-m240-mouse
     sensitivity = -0.7
