--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -49,7 +49,7 @@ font-1 = "Hack Nerd Font Mono:size=26;5"
 font-2 = "Hack Nerd Font Mono:size=20;5"
 font-3 = "Hack Nerd Font Mono:size=16;3"
 
-modules-left = i3 spacer firefox obsidian files
+modules-left = i3 spacer web obsidian files
 modules-center = date
 modules-right = xkeyboard 3space spotify-prev spotify-play spotify-next spacer audio pulseaudio spacer powermode spacer powermenu
 
