--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -207,14 +207,14 @@ format-font = 4
 ;   Launchers
 ;================================
 
-[module/firefox]
+[module/web]
 type = custom/script
-exec = echo " "
+exec = echo "󰖟 "
 format = <label>
 label-font = 3
 # label-padding-left = 1
 format-foreground = ${colors.foreground}
-click-left = firefox
+click-left = zen-browser
 
 [module/obsidian]
 type = custom/script
