--- a/i3/config
+++ b/i3/config
@@ -52,17 +52,14 @@ bindsym $mod+j focus down
 bindsym $mod+k focus up
 bindsym $mod+l focus right
 
-
 # move focused window
 bindsym $mod+Shift+h move left
 bindsym $mod+Shift+j move down
 bindsym $mod+Shift+k move up
 bindsym $mod+Shift+l move right
 
-# split in horizontal orientation
+# split orientation
 bindsym $mod+Control+k split h
-
-# split in vertical orientation
 bindsym $mod+Control+j split v
 
 # enter fullscreen mode for the focused container
@@ -82,8 +79,6 @@ bindsym $mod+s floating toggle
 
 # change focus between tiling / floating windows
 bindsym $mod+Shift+s focus mode_toggle
-
-# focus the child container
 
 #### Monitors & workspaces ####
 set $main "DP-3"
@@ -117,11 +112,11 @@ bindsym $mod+F3 workspace number $ws6
 bindsym $mod+F4 workspace number $ws7
 bindsym $mod+F5 workspace number $ws8
 
+# extra navigation
 bindsym $mod+period workspace next
 bindsym $mod+comma workspace prev
 bindsym $mod+Tab focus output right
 bindsym $mod+grave move container to output right; focus output right
-
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number $ws1; workspace number $ws1
@@ -162,6 +157,12 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
+
+######################
+#### Window Rules ####
+######################
+
+for_window [class="kitty" instance="kitty"] floating enabled
 
 #######################
 #### Themes & Bars ####
