change configs for zen

--- a/archbook/hypr/hyprland.conf
+++ b/archbook/hypr/hyprland.conf
@@ -149,7 +149,7 @@ bind = $mainMod Control, backspace, exec, /home/john/.config/hypr/scripts/reset-
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, W, exec, firefox
+bind = $mainMod, W, exec, zen-browser
 
 # Window control
 
