theme rework, dunst, floating spotify/notes

--- a/kitty/current-theme.conf
+++ b/kitty/current-theme.conf
@@ -10,7 +10,7 @@
 
 # The basic colors
 foreground              #CAD3F5
-background              #24273A
+background              #181926
 selection_foreground    #24273A
 selection_background    #F4DBD6
 
