--- a/i3/config
+++ b/i3/config
@@ -32,10 +32,11 @@ bindsym --release Caps_Lock exec --no-startup-id pkill -SIGRTMIN+10 i3blocks
 bindsym $mod+space exec --no-startup-id rofi -m -1 -show drun -drun-display-format \{name\}
 bindsym $mod+Control+space exec --no-startup-id ~/myrepo/myscripts/bash/rofi/mymenu.sh
 bindsym $mod+Return exec --no-startup-id wezterm
+bindsym $mod+Control+Return exec --no-startup-id kitty
 bindsym $mod+w exec zen-browser
 bindsym $mod+Control+w exec firefox --private-window
 bindsym $mod+e exec nemo
-bindsym $mod+n exec --no-startup-id wezterm start -e nvim $HOME/Documents/obsidian-sync/Notes/_quick.md
+bindsym $mod+n exec --no-startup-id kitty --class="__notes" -e nvim "+hi Normal guibg=1e1e2e" $HOME/Documents/obsidian-sync/Notes/_quick.md
 
 # media keys
 bindsym XF86AudioPlay exec --no-startup-id spotify_player playback play-pause
@@ -162,7 +163,20 @@ bindsym $mod+r mode "resize"
 #### Window Rules ####
 ######################
 
+# scratchpad
 for_window [class="kitty" instance="kitty"] floating enabled
+for_window [class="kitty" instance="kitty"] resize set 960 540
+for_window [class="kitty" instance="kitty"] move position center
+
+# spotify window
+for_window [class="__spotify" instance="__spotify"] floating enabled
+for_window [class="__spotify" instance="__spotify"] resize set 960 540
+for_window [class="__spotify" instance="__spotify"] move position center
+
+# notes window
+for_window [class="__notes" instance="__notes"] floating enabled
+for_window [class="__notes" instance="__notes"] resize set 800 600
+for_window [class="__notes" instance="__notes"] move position center
 
 #######################
 #### Themes & Bars ####
