--- a/archbook/hypr/hyprland.conf
+++ b/archbook/hypr/hyprland.conf
@@ -29,7 +29,7 @@ monitor=,1920x1080,auto,1
 # Set programs that you use
 $terminal = wezterm
 $fileManager = thunar
-$menu = wofi --show drun
+$menu = rofi -show drun
 
 #############################
 ### environment variables ###
@@ -147,9 +147,11 @@ bind = $mainMod Control, backspace, exec, /home/john/.config/hypr/scripts/reset-
 
 # Applications
 bind = $mainMod, space, exec, $menu
+bind = $mainMod, O, exec, ~/myrepo/myscripts/bash/rofi/archbook/mymenu.sh
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, W, exec, zen-browser
+bind = $mainMod, N, exec, kitty --class="__notes" -e nvim "+hi Normal guibg=1e1e2e" $HOME/Documents/obsidian-sync/Notes/_quick.md
 
 # Window control
 
@@ -221,6 +223,14 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 ##############################
 ### windows and workspaces ###
 ##############################
+
+# Spotify
+windowrule = float, ^(__spotify)$
+windowrule = size 960 540, ^(__spotify)$
+
+# Qucik Note
+windowrule = float, ^(__notes)$
+windowrule = size 800 600, ^(__notes)$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
