added floating apps to hyprland

--- a/archbook/hypr/hyprland.conf
+++ b/archbook/hypr/hyprland.conf
@@ -149,6 +149,7 @@ bind = $mainMod Control, backspace, exec, /home/john/.config/hypr/scripts/reset-
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, O, exec, ~/myrepo/myscripts/bash/rofi/archbook/mymenu.sh
 bind = $mainMod, return, exec, $terminal
+bind = $mainMod Control, return, exec, kitty --class="__scratchpad"
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, W, exec, zen-browser
 bind = $mainMod, N, exec, kitty --class="__notes" -e nvim "+hi Normal guibg=1e1e2e" $HOME/Documents/obsidian-sync/Notes/_quick.md
@@ -231,6 +232,10 @@ windowrule = size 960 540, ^(__spotify)$
 # Qucik Note
 windowrule = float, ^(__notes)$
 windowrule = size 800 600, ^(__notes)$
+
+# Scratchpad
+windowrule = float, ^(__scratchpad)$
+windowrule = size 960 540, ^(__scratchpad)$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
