--- a/archbox/i3wm/polybar/modules.ini
+++ b/archbox/i3wm/polybar/modules.ini
@@ -131,10 +131,8 @@ initial = 1
 hook-0 = ~/.config/polybar/scripts/audio.sh get &
 hook-1 = ~/.config/polybar/scripts/audio.sh swap &
 hook-2 = ~/.config/polybar/scripts/audio.sh reset &
-hook-3 = exec pavucontrol &
 click-left = "#audio.hook.1"
-click-middle = "#audio.hook.2"
-click-right = "#audio.hook.3"
+click-right = "#audio.hook.2"
 
 [module/pulseaudio]
 type = internal/pulseaudio
@@ -153,6 +151,8 @@ label-muted = 
 label-muted-font = 3
 label-muted-foreground = ${colors.peach}
 label-muted-padding-right = 1
+
+click-right = exec pavucontrol &
 
 ;================================
 ;   Spotify
