--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -10,16 +10,31 @@
 # Theme
 include current-theme.conf
 
-# Fonts
-font_size 14
-
-font_family Hack Nerd Font Mono
-bold_font auto
-italic_font auto
-bold_italic_font auto
+# # Fonts
+# font_size 14
+#
+# font_family Hack Nerd Font Mono
+# bold_font auto
+# italic_font auto
+# bold_italic_font auto
 
 # Misc
 window_padding_width 5
 enable_audio_bell no
 
 enabled_layouts tall
+
+# BEGIN_KITTY_FONTS
+# Font ligatures settings for Jet Brains Mono Font:
+# https://github.com/JetBrains/JetBrainsMono/wiki/OpenType-features
+font_family             family="Hack Nerd Font Mono" features="+zero +ss02 +cv04 +cv16 +cv18 +cv19 +cv20"
+bold_font               auto
+italic_font             auto
+bold_italic_font        auto
+font_size               14.0
+modify_font cell_height 120%
+# END_KITTY_FONTS
+
+# BEGIN_KITTY_SYMBOL_MAPS
+symbol_map U+E000-U+F1AF0 Hack Nerd Font
+# END_KITTY_SYMBOL_MAPS
