added archbook version of dunst

--- a/archbook/hypr/hyprland.conf
+++ b/archbook/hypr/hyprland.conf
@@ -28,7 +28,7 @@ monitor=,1920x1080,auto,1
 
 # Set programs that you use
 $terminal = wezterm
-$fileManager = thunar
+$fileManager = nemo
 $menu = rofi -show drun
 
 #############################
@@ -111,7 +111,7 @@ input {
 
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
     force_no_accel = false
-    accel_profile = "flat" 
+    accel_profile = flat 
 
     touchpad {
         natural_scroll = false
