added window rules to hypr config

--- a/archbook/hypr/hyprland.conf
+++ b/archbook/hypr/hyprland.conf
@@ -225,17 +225,25 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 ### windows and workspaces ###
 ##############################
 
+# Scratchpad
+windowrule = float, ^(__scratchpad)$
+windowrule = size 960 540, ^(__scratchpad)$
+
 # Spotify
 windowrule = float, ^(__spotify)$
-windowrule = size 960 540, ^(__spotify)$
+windowrule = size 1280 720, ^(__spotify)$
+
+# Btop Window
+windowrule = float, ^(__btop)$
+windowrule = size 1280 720, ^(__btop)$
+
+# Lazygit
+windowrule = float, ^(__lazygit)$
+windowrule = size 1280 720, ^(__lazygit)$
 
 # Qucik Note
 windowrule = float, ^(__notes)$
 windowrule = size 800 600, ^(__notes)$
-
-# Scratchpad
-windowrule = float, ^(__scratchpad)$
-windowrule = size 960 540, ^(__scratchpad)$
 
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
