config tweaks: wezterm, i3, polybar

--- a/archbox/i3wm/polybar/modules.ini
+++ b/archbox/i3wm/polybar/modules.ini
@@ -22,10 +22,10 @@ ws-icon-1 = 2;󰎧
 ws-icon-2 = 3;󰎪
 ws-icon-3 = 4;󰎭
 
-ws-icon-4 = 5;󰎱
-ws-icon-5 = 6;󰎳
-ws-icon-6 = 7;󰎶
-ws-icon-7 = 8;󰎹
+ws-icon-4 = 5;󰎤
+ws-icon-5 = 6;󰎧
+ws-icon-6 = 7;󰎪
+ws-icon-7 = 8;󰎭
 
 label-focused = %icon%
 label-focused-foreground = ${colors.blue}
@@ -108,9 +108,32 @@ label-foreground = ${colors.peach}
 [module/filesystem]
 type = internal/fs
 interval = 25
-
 mount-0 = /
 format-mounted-prefix = "󰋊 "
+format-mounted-prefix-foreground = ${colors.blue}
+format-mounted-prefix-background = ${colors.darker}
+format-mounted-prefix-font = 3
+label-mounted = %percentage_used%%
+label-mounted-foreground = ${colors.peach}
+label-mounted-background = ${colors.darker}
+
+[module/games]
+type = internal/fs
+interval = 25
+mount-0 = /mnt/Games
+format-mounted-prefix = "  "
+format-mounted-prefix-foreground = ${colors.blue}
+format-mounted-prefix-background = ${colors.darker}
+format-mounted-prefix-font = 3
+label-mounted = %percentage_used%%
+label-mounted-foreground = ${colors.peach}
+label-mounted-background = ${colors.darker}
+
+[module/storage]
+type = internal/fs
+interval = 25
+mount-0 = /mnt/Storage
+format-mounted-prefix = "  "
 format-mounted-prefix-foreground = ${colors.blue}
 format-mounted-prefix-background = ${colors.darker}
 format-mounted-prefix-font = 3
