--- a/archbox/i3wm/i3/config
+++ b/archbox/i3wm/i3/config
@@ -34,7 +34,7 @@ bindsym $mod+space exec --no-startup-id rofi -m -primary -show drun -drun-displa
 bindsym $mod+Return exec --no-startup-id wezterm
 bindsym $mod+Control+Return exec --no-startup-id kitty
 bindsym $mod+w exec zen-browser
-bindsym $mod+Control+w exec firefox --private-window
+bindsym $mod+Control+w exec zen-browser --private-window
 bindsym $mod+e exec nemo
 bindsym $mod+n exec --no-startup-id kitty --class="__notes" -e nvim "+hi Normal guibg=1e1e2e" $HOME/Documents/obsidian-sync/Notes/_quick.md
 
@@ -108,10 +108,10 @@ bindsym $mod+1 workspace number $ws1
 bindsym $mod+2 workspace number $ws2
 bindsym $mod+3 workspace number $ws3
 bindsym $mod+4 workspace number $ws4
-bindsym $mod+F2 workspace number $ws5
-bindsym $mod+F3 workspace number $ws6
-bindsym $mod+F4 workspace number $ws7
-bindsym $mod+F5 workspace number $ws8
+bindsym $mod+Control+1 workspace number $ws5
+bindsym $mod+Control+2 workspace number $ws6
+bindsym $mod+Control+3 workspace number $ws7
+bindsym $mod+Control+4 workspace number $ws8
 
 # extra navigation
 bindsym $mod+period workspace next
@@ -124,10 +124,10 @@ bindsym $mod+Shift+1 move container to workspace number $ws1; workspace number $
 bindsym $mod+Shift+2 move container to workspace number $ws2; workspace number $ws2
 bindsym $mod+Shift+3 move container to workspace number $ws3; workspace number $ws3
 bindsym $mod+Shift+4 move container to workspace number $ws4; workspace number $ws4
-bindsym $mod+Shift+F2 move container to workspace number $ws5; workspace number $ws5
-bindsym $mod+Shift+F3 move container to workspace number $ws6; workspace number $ws6
-bindsym $mod+Shift+F4 move container to workspace number $ws7; workspace number $ws7
-bindsym $mod+Shift+F5 move container to workspace number $ws8; workspace number $ws8
+bindsym $mod+Shift+Control+1 move container to workspace number $ws5; workspace number $ws5
+bindsym $mod+Shift+Control+2 move container to workspace number $ws6; workspace number $ws6
+bindsym $mod+Shift+Control+3 move container to workspace number $ws7; workspace number $ws7
+bindsym $mod+Shift+Control+4 move container to workspace number $ws8; workspace number $ws8
 
 bindsym $mod+Control+BackSpace restart
 bindsym $mod+Control+Delete exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
