--- a/archbox/i3wm/polybar/config.ini
+++ b/archbox/i3wm/polybar/config.ini
@@ -86,7 +86,7 @@ font-3 = "Hack Nerd Font Mono:size=16;3"
 
 modules-left = i3 spacer tray
 modules-center = date
-modules-right = updates-arch spacer temperature spacer cpu spacer memory spacer filesystem
+modules-right = updates-arch spacer temperature spacer cpu spacer memory spacer filesystem games storage
 
 cursor-click = pointer
 cursor-scroll = ns-resize
