updated hypr due to update changing settings

--- a/archbook/hypr/hyprland.conf
+++ b/archbook/hypr/hyprland.conf
@@ -58,10 +58,12 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 1.0
 
-    drop_shadow = true
-    shadow_range = 2
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    shadow  {
+        enabled = true
+        range = 2
+        render_power = 3
+        color = rgba(1a1a1aee)
+    }
 
     blur {
         enabled = true
@@ -87,7 +89,7 @@ animations {
 
 master {
     new_status = slave
-    no_gaps_when_only = 1
+    # no_gaps_when_only = 1
     mfact = 0.50
 }
 
@@ -224,6 +226,13 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 ##############################
 ### windows and workspaces ###
 ##############################
+
+workspace = w[tv1], gapsout:0, gapsin:0
+workspace = f[1], gapsout:0, gapsin:0
+windowrulev2 = bordersize 0, floating:0, onworkspace:w[tv1]
+windowrulev2 = rounding 0, floating:0, onworkspace:w[tv1]
+windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
+windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
 
 # Scratchpad
 windowrule = float, ^(__scratchpad)$
