--- a/archbook/hypr/hyprland.conf
+++ b/archbook/hypr/hyprland.conf
@@ -111,7 +111,6 @@ input {
 
     follow_mouse = 1
 
-    sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
     force_no_accel = false
     accel_profile = flat 
 
@@ -133,7 +132,12 @@ cursor {
 
 device {
     name = logi-m240-mouse
-    sensitivity = -0.7
+    sensitivity = -0.3
+}
+
+device {
+  name = asup1411:00-093a:200b-touchpad
+  sensitivity = -0.1
 }
 
 ###################
