configs after update

--- a/archbook/waybar/config.jsonc
+++ b/archbook/waybar/config.jsonc
@@ -44,7 +44,7 @@
   },
   "custom/web": {
     "format": "󰖟",
-    "on-click": "firefox",
+    "on-click": "zen-browser",
   },
   "custom/obsidian": {
     "format": "",
