--- a/dotfiles/i3wm/i3/config
+++ b/dotfiles/i3wm/i3/config
@@ -80,7 +80,6 @@ bindsym $mod+Control+j split v
 bindsym $mod+a fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+o layout stacking
 bindsym $mod+i layout tabbed
 bindsym $mod+u layout toggle split
 
@@ -130,7 +129,9 @@ bindsym $mod+Control+4 workspace number $ws8
 bindsym $mod+period workspace next
 bindsym $mod+comma workspace prev
 bindsym $mod+Tab focus output right
+bindsym $mod+o focus output right
 bindsym $mod+grave move container to output right; focus output right
+bindsym $mod+Control+o move container to output right; focus output right
 
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace number $ws1; workspace number $ws1
