--- a/dotfiles/i3wm/polybar/modules.ini
+++ b/dotfiles/i3wm/polybar/modules.ini
@@ -7,7 +7,7 @@
 # ╚═╝░░░░░░╚════╝░╚══════╝░░░╚═╝░░░╚═════╝░╚═╝░░╚═╝╚═╝░░╚═╝ #
 #              █▀▄▀█ █▀█ █▀▄ █░█ █░░ █▀▀ █▀                 #
 #              █░▀░█ █▄█ █▄▀ █▄█ █▄▄ ██▄ ▄█                 #
-#############################################################
+#######################################################i3wm##
 
 ;================================
 ;   Workspaces & Windows 
@@ -89,7 +89,7 @@ hwmon-path = /sys/devices/pci0000:00/0000:00:18.3/hwmon/hwmon1/temp3_input
 type = internal/cpu
 interval = 2
 format-background = ${colors.darker}
-format-prefix = ""
+format-prefix = " "
 format-prefix-foreground = ${colors.blue}
 format-prefix-font = 3
 label = %percentage:2%%
@@ -227,7 +227,8 @@ format = <label>
 label-font = 3
 # label-padding-left = 1
 format-foreground = ${colors.foreground}
-click-left = zen-browser
+click-left = firefox
+click-right = firefox --private-window
 
 [module/obsidian]
 type = custom/script
