--- a/dotfiles/i3wm/i3/config
+++ b/dotfiles/i3wm/i3/config
@@ -28,6 +28,7 @@ smart_gaps on
 #### Starup ####
 ################
 
+exec --no-startup-id steam -silent &
 exec --no-startup-id dunst &
 exec --no-startup-id lxsession &
 exec --no-startup-id picom &
@@ -43,11 +44,11 @@ exec --no-startup-id numlockx on
 
 bindsym $mod+Control+q kill
 bindsym --release Caps_Lock exec --no-startup-id pkill -SIGRTMIN+10 i3blocks
-bindsym $mod+space exec --no-startup-id rofi -m -primary -show drun -drun-display-format \{name\}
+bindsym $mod+space exec --no-startup-id rofi -m -4 -show drun -drun-display-format \{name\}
 bindsym $mod+Return exec --no-startup-id wezterm
 bindsym $mod+Control+Return exec --no-startup-id kitty
-bindsym $mod+w exec zen-browser
-bindsym $mod+Control+w exec zen-browser --private-window
+bindsym $mod+w exec firefox
+bindsym $mod+Control+w exec firefox --private-window
 bindsym $mod+e exec nemo
 bindsym $mod+n exec --no-startup-id kitty --class="__notes" -e nvim "+hi Normal guibg=1e1e2e" $HOME/Documents/obsidian-sync/Notes/_quick.md
 
@@ -67,14 +68,14 @@ bindsym $mod+k focus up
 bindsym $mod+l focus right
 
 # move focused window
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
+bindsym $mod+Control+h move left
+bindsym $mod+Control+j move down
+bindsym $mod+Control+k move up
+bindsym $mod+Control+l move right
 
 # split orientation
-bindsym $mod+Control+k split h
-bindsym $mod+Control+j split v
+bindsym $mod+Shift+k split h
+bindsym $mod+Shift+j split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+a fullscreen toggle
@@ -201,10 +202,16 @@ for_window [class="__lazygit" instance="__lazygit"] move position center
 for_window [class="__bluetui" instance="__bluetui"] floating enabled
 for_window [class="__bluetui" instance="__bluetui"] resize set 1024 768
 for_window [class="__bluetui" instance="__bluetui"] move position center
+
 # notes window
 for_window [class="__notes" instance="__notes"] floating enabled
 for_window [class="__notes" instance="__notes"] resize set 1024 768
 for_window [class="__notes" instance="__notes"] move position center
+
+# misc rules
+assign [class="discord"] output nonprimary
+assign [class="steam_app_230410"] output primary
+assign [class="steam_app_2183900"] output primary
 
 #######################
 #### Themes & Bars ####
