--- a/dotfiles/i3wm/polybar/modules.ini
+++ b/dotfiles/i3wm/polybar/modules.ini
@@ -92,7 +92,7 @@ format-background = ${colors.darker}
 format-prefix = " "
 format-prefix-foreground = ${colors.blue}
 format-prefix-font = 3
-label = %percentage:2%%
+label = %percentage%%
 label-foreground = ${colors.peach}
 
 [module/memory]
@@ -305,8 +305,18 @@ format-foreground = ${colors.background}
 format-background = ${colors.red}
 format-padding = 1
 
+label-indicator-on-background = ${colors.blue}
 label-indicator-on = %icon%
 label-indicator-on-capslock = -Caps Lock-
+
+[module/language]
+type = internal/xkeyboard
+format = <label-layout>
+format-foreground = ${colors.blue}
+
+label-layout = %icon%
+layout-icon-0 = us;󰬂󱎤
+layout-icon-1 = de;󰫱󰫲
 
 [module/spacer]
 type = custom/text
