--- a/dotfiles/i3wm/i3/config
+++ b/dotfiles/i3wm/i3/config
@@ -37,6 +37,8 @@ exec --no-startup-id xfce4-power-manager &
 exec --no-startup-id flameshot &
 exec --no-startup-id discord --start-minimized &
 exec --no-startup-id numlockx on
+
+exec --no-startup-id setxkbmap -layout us,de &
   
 ##################
 #### Keybinds ####
@@ -50,7 +52,7 @@ bindsym $mod+Control+Return exec --no-startup-id kitty
 bindsym $mod+w exec firefox
 bindsym $mod+Control+w exec firefox --private-window
 bindsym $mod+e exec nemo
-bindsym $mod+n exec --no-startup-id kitty --class="__notes" -e nvim "+hi Normal guibg=1e1e2e" $HOME/Documents/obsidian-sync/Notes/_quick.md
+bindsym $mod+n exec --no-startup-id wezterm --config-file ~/.config/wezterm/wezterm-float.lua start --class="__notes" nvim $HOME/Documents/obsidian-sync/Notes/_quick.md
 
 # media keys
 bindsym XF86AudioPlay exec --no-startup-id spotify_player playback play-pause
