--- a/dotfiles/i3wm/polybar/config.ini
+++ b/dotfiles/i3wm/polybar/config.ini
@@ -51,7 +51,7 @@ font-3 = "Hack Nerd Font Mono:size=16;3"
 
 modules-left = i3 spacer files web obsidian
 modules-center = date
-modules-right = xkeyboard 3space spotify-prev spotify-play spotify-next spacer audio pulseaudio spacer powermode spacer powermenu
+modules-right = xkeyboard 3space language spacer spotify-prev spotify-play spotify-next spacer audio pulseaudio spacer powermode spacer powermenu
 
 cursor-click = pointer
 cursor-scroll = ns-resize
