--- a/dotfiles/archbook/hypr/hyprland.conf
+++ b/dotfiles/archbook/hypr/hyprland.conf
@@ -14,6 +14,9 @@ exec-once = waybar &
 exec-once = hyprpaper &
 exec-once = hypridle &
 
+exec-once = flameshot &
+exec-once = nm-applet &
+
 #-------------------------------------------
 #-- monitors
 #-------------------------------------------
@@ -129,7 +132,7 @@ input {
   kb_model =
   kb_options =
   kb_rules =
-  follow_mouse = 1
+  follow_mouse = 0
   sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
   force_no_accel = false
@@ -175,7 +178,7 @@ bind = $mainMod, space, exec, $menu
 bind = $mainMod, return, exec, $terminal
 bind = $mainMod Control, return, exec, kitty --class="__scratchpad"
 bind = $mainMod, E, exec, $fileManager
-bind = $mainMod, W, exec, zen-browser
+bind = $mainMod, W, exec, firefox
 bind = $mainMod, N, exec, kitty --class="__notes" -e nvim "+hi Normal guibg=1e1e2e" $HOME/Documents/obsidian-sync/Notes/_quick.md
 
 # Window control
