--- a/dotfiles/archbook/waybar/config.jsonc
+++ b/dotfiles/archbook/waybar/config.jsonc
@@ -18,7 +18,6 @@
     "memory",
     "disk",
     "backlight",
-    "network",
     "battery",
     "tray",
     "idle_inhibitor",
@@ -100,13 +99,6 @@
     "format-icons": ["", "", "", "", "", "", "", "", ""],
     "tooltip": false
   },
-  "network": {
-    // "interface": "wlp2*", // (Optional) To force the use of this interface
-    "format-wifi": "{essid} ({signalStrength}%) <span foreground='#8aadf4'> </span>",
-    "tooltip-format": "{ifname} via {gwaddr} ",
-    "format-linked": "{ifname} (No IP) ",
-    "format-disconnected": "Disconnected ⚠",
-  },
   "battery": {
     "states": {
         // "good": 95,
@@ -121,7 +113,7 @@
     "format-icons": ["", "", "", "", ""]
   },
   "tray": {
-    // "icon-size": 21,
+    "icon-size": 20,
     "spacing": 10,
     "show-passive-items": true
   },
