--- a/dotfiles/archbook/hypr/hyprland.conf
+++ b/dotfiles/archbook/hypr/hyprland.conf
@@ -5,7 +5,7 @@
 #██╔══██║░░╚██╔╝░░██╔═══╝░██╔══██╗██║░░░░░██╔══██║██║╚████║██║░░██║#
 #██║░░██║░░░██║░░░██║░░░░░██║░░██║███████╗██║░░██║██║░╚███║██████╔╝#
 #╚═╝░░╚═╝░░░╚═╝░░░╚═╝░░░░░╚═╝░░╚═╝╚══════╝╚═╝░░╚═╝╚═╝░░╚══╝╚═════╝░#
-####################################################################
+########################################################Archbook####
 
 #-------------------------------------------
 #-- autostart
@@ -14,7 +14,6 @@ exec-once = waybar &
 exec-once = hyprpaper &
 exec-once = hypridle &
 
-exec-once = flameshot &
 exec-once = nm-applet &
 
 #-------------------------------------------
@@ -82,8 +81,8 @@ animations {
   animation = global, 1, 10, default
   animation = border, 1, 5.39, easeOutQuint
   animation = windows, 1, 4.79, easeOutQuint
-  animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
-  animation = windowsOut, 1, 1.49, linear, popin 87%
+  animation = windowsIn, 1, 4.1, easeOutQuint, popin 10%
+  animation = windowsOut, 1, 1.49, linear, popin 10%
   animation = fadeIn, 1, 1.73, almostLinear
   animation = fadeOut, 1, 1.46, almostLinear
   animation = fade, 1, 3.03, quick
@@ -93,8 +92,8 @@ animations {
   animation = fadeLayersIn, 1, 1.79, almostLinear
   animation = fadeLayersOut, 1, 1.39, almostLinear
   animation = workspaces, 1, 1.94, almostLinear, fade
-  animation = workspacesIn, 1, 1.21, almostLinear, fade
-  animation = workspacesOut, 1, 1.94, almostLinear, fade
+  animation = workspacesIn, 1, 1.21, almostLinear, slide
+  animation = workspacesOut, 1, 1.94, almostLinear, slide
 }
 
 # "Smart gaps" / "No gaps when only"
@@ -132,7 +131,7 @@ input {
   kb_model =
   kb_options =
   kb_rules =
-  follow_mouse = 0
+  follow_mouse = 2
   sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
   force_no_accel = false
@@ -176,10 +175,10 @@ bind = $mainMod Control, backspace, exec, /home/john/.config/hypr/scripts/reset-
 # Applications
 bind = $mainMod, space, exec, $menu
 bind = $mainMod, return, exec, $terminal
-bind = $mainMod Control, return, exec, kitty --class="__scratchpad"
+bind = $mainMod Control, return, exec, wezterm --config-file ~/.config/wezterm/wezterm-float.lua start --class="__scratchpad"
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, W, exec, firefox
-bind = $mainMod, N, exec, kitty --class="__notes" -e nvim "+hi Normal guibg=1e1e2e" $HOME/Documents/obsidian-sync/Notes/_quick.md
+bind = $mainMod, N, exec, wezterm --config-file ~/.config/wezterm/wezterm-float.lua start --class="__notes" nvim $HOME/Documents/obsidian-sync/Notes/_quick.md
 
 # Window control
 bind = $mainMod, S, togglefloating,
@@ -248,7 +247,7 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 #-------------------------------------------
 # Scratchpad
 windowrule = float, ^(__scratchpad)$
-windowrule = size 960 540, ^(__scratchpad)$
+windowrule = size 1280 720, ^(__scratchpad)$
 
 # Spotify
 windowrule = float, ^(__spotify)$
