--- a/dotfiles/i3wm/polybar/modules.ini
+++ b/dotfiles/i3wm/polybar/modules.ini
@@ -281,6 +281,7 @@ initial = 1
 hook-0 = ~/.config/polybar/scripts/power-mode.sh
 hook-1 = ~/.config/polybar/scripts/power-mode.sh swap &
 click-left = "#powermode.hook.1"
+click-right = xfce4-power-manager-settings
 
 [module/tray]
 type = internal/tray
