--- a/dotfiles/i3wm/i3/config
+++ b/dotfiles/i3wm/i3/config
@@ -29,13 +29,15 @@ smart_gaps on
 
 bindsym $mod+Control+q kill
 bindsym --release Caps_Lock exec --no-startup-id pkill -SIGRTMIN+10 i3blocks
-bindsym $mod+space exec --no-startup-id rofi -m -1 -show drun -drun-display-format {name}
 bindsym $mod+Return exec --no-startup-id wezterm
-bindsym $mod+Control+Return exec --no-startup-id kitty
 bindsym $mod+w exec firefox
 bindsym $mod+Control+w exec firefox --private-window
 bindsym $mod+e exec nemo
 bindsym $mod+n exec --no-startup-id wezterm --config-file ~/.config/wezterm/wezterm-float.lua start --class="__notes" nvim $HOME/Documents/obsidian-sync/Notes/_quick.md
+
+# rofi
+bindsym $mod+space exec --no-startup-id rofi -m -1 -show drun -drun-display-format {name}
+bindsym $mod+Control+space exec ~/myrepo/myscripts/bash/rofi/web.sh
 
 # media keys
 bindsym XF86AudioPlay exec --no-startup-id spotify_player playback play-pause
@@ -66,8 +68,9 @@ bindsym $mod+Shift+j split v
 bindsym $mod+a fullscreen toggle
 
 # change container layout (stacked, tabbed, toggle split)
-bindsym $mod+i layout tabbed
-bindsym $mod+u layout toggle split
+bindsym $mod+i layout toggle tabbed split
+# bindsym $mod+i layout tabbed
+# bindsym $mod+u layout toggle split
 
 # focus the parent container
 bindsym $mod+p focus parent
@@ -80,8 +83,8 @@ bindsym $mod+s floating toggle
 bindsym $mod+d focus mode_toggle
 
 #### Monitors & workspaces ####
-set $main "DP-3"
-set $side "DP-1"
+set $main "DP-1"
+set $side "HDMI-0"
 
 set $ws1 "1"
 set $ws2 "2"
@@ -162,11 +165,6 @@ bindsym $mod+r mode "resize"
 ######################
 #### Window Rules ####
 ######################
-
-# scratchpad
-for_window [class="kitty" instance="kitty"] floating enabled
-for_window [class="kitty" instance="kitty"] resize set 960 540
-for_window [class="kitty" instance="kitty"] move position center
 
 # spotify window
 for_window [class="__spotify" instance="__spotify"] floating enabled
