--- a/dotfiles/i3wm/polybar/config.ini
+++ b/dotfiles/i3wm/polybar/config.ini
@@ -25,40 +25,6 @@ mauve = #c6a0f6
 peach = #f5a97f
 
 [bar/bar1]
-monitor = DP-3
-width = 100%
-height = 20pt
-font = 0
-fixed-center = true
-
-; dpi = 96
-
-background = ${colors.background}
-foreground = ${colors.white}
-
-line-size = 1pt
-
-border-bottom-size = 2
-border-color = ${colors.border}
-
-padding = 1
-module-margin = 0
-
-font-0 = "Hack Nerd Font Mono:size=12;2"
-font-1 = "Hack Nerd Font Mono:size=26;5"
-font-2 = "Hack Nerd Font Mono:size=20;5"
-font-3 = "Hack Nerd Font Mono:size=16;3"
-
-modules-left = i3 spacer files web obsidian
-modules-center = date
-modules-right = xkeyboard 3space language spacer spotify-prev spotify-play spotify-next spacer audio pulseaudio spacer powermode spacer powermenu
-
-cursor-click = pointer
-cursor-scroll = ns-resize
-
-enable-ipc = true
-
-[bar/bar2]
 monitor = DP-1
 width = 100%
 height = 20pt
@@ -72,6 +38,40 @@ foreground = ${colors.white}
 
 line-size = 1pt
 
+border-bottom-size = 2
+border-color = ${colors.border}
+
+padding = 1
+module-margin = 0
+
+font-0 = "Firacode Nerd Font Mono:size=12;2"
+font-1 = "Firacode Nerd Font Mono:size=26;5"
+font-2 = "Firacode Nerd Font Mono:size=20;5"
+font-3 = "Firacode Nerd Font Mono:size=16;3"
+
+modules-left = date spacer i3 spacer files web obsidian
+modules-center = 
+modules-right = xkeyboard 3space language spacer spotify-prev spotify-play spotify-next spacer audio pulseaudio spacer powermode spacer powermenu
+
+cursor-click = pointer
+cursor-scroll = ns-resize
+
+enable-ipc = true
+
+[bar/bar2]
+monitor = HDMI-0
+width = 100%
+height = 20pt
+font = 0
+fixed-center = true
+
+; dpi = 96
+
+background = ${colors.background}
+foreground = ${colors.white}
+
+line-size = 1pt
+
 
 border-bottom-size = 2
 border-color = ${colors.border}
@@ -84,8 +84,8 @@ font-1 = "Hack Nerd Font Mono:size=26;5"
 font-2 = "Hack Nerd Font Mono:size=20;5"
 font-3 = "Hack Nerd Font Mono:size=16;3"
 
-modules-left = i3 spacer tray
-modules-center = date
+modules-left = date spacer i3 spacer tray
+modules-center = 
 modules-right = updates-arch spacer temperature spacer cpu spacer memory spacer filesystem games storage
 
 cursor-click = pointer
