--- a/dotfiles/i3wm/i3/config
+++ b/dotfiles/i3wm/i3/config
@@ -48,6 +48,8 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id pactl -- set-sink-volume @DEFA
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl -- set-sink-volume @DEFAULT_SINK@ -5% #decrease sound volume
 bindsym XF86AudioMute exec --no-startup-id pactl -- set-sink-mute @DEFAULT_SINK@ toggle # mute sound
 
+bindcode 152 exec --no-startup-id $HOME/myrepo/myscripts/bash/rofi/spotify.sh
+
 # change focus
 bindsym $mod+h focus left
 bindsym $mod+j focus down
