replaced wild magic with go version

--- a/dotfiles/archbook/hypr/hyprland.conf
+++ b/dotfiles/archbook/hypr/hyprland.conf
@@ -273,6 +273,9 @@ windowrule = size 1280 720, ^(__nmtui)$
 windowrule = float, ^(__notes)$
 windowrule = size 1024 786, ^(__notes)$
 
+# Wild Magic Table
+windowrule = float, ^(Wild Magic Table)
+
 # Ignore maximize requests from apps. You'll probably like this.
 windowrulev2 = suppressevent maximize, class:.*
 
