--- a/dotfiles/i3wm/i3/config
+++ b/dotfiles/i3wm/i3/config
@@ -196,6 +196,7 @@ for_window [class="__notes" instance="__notes"] move position center
 # go apps
 for_window [class="Hello" instance="Hello"] floating enabled
 for_window [class="Wild Magic Table" instance="Wild Magic Table"] floating enabled
+for_window [class="Initiative Tracker" instance="Initiative Tracker"] floating enabled
 
 # misc rules
 assign [class="discord"] output nonprimary
