--- a/dotfiles/i3wm/i3/config
+++ b/dotfiles/i3wm/i3/config
@@ -7,7 +7,7 @@
 #╚═╝╚═════╝░░░░╚═╝░░░╚═╝░░╚═╝░░░░░╚═╝#
 ######################################
 
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
+exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock -i $HOME/myrepo/Wallpapers/2monitors/streaks.png --nofork
 exec --no-startup-id dex --autostart --environment i3
 
 font pango:Hack Nerd Font Mono 8
@@ -34,6 +34,7 @@ bindsym $mod+w exec firefox
 bindsym $mod+Control+w exec firefox --private-window
 bindsym $mod+e exec nemo
 bindsym $mod+n exec --no-startup-id wezterm --config-file ~/.config/wezterm/wezterm-float.lua start --class="__notes" nvim $HOME/Documents/obsidian-sync/Notes/_quick.md
+bindsym $mod+y exec --no-startup-id $HOME/myrepo/myscripts/bash/rofi/launcher.sh btop
 
 # rofi
 bindsym $mod+space exec --no-startup-id rofi -m -1 -show drun -drun-display-format {name}
@@ -48,7 +49,7 @@ bindsym XF86AudioRaiseVolume exec --no-startup-id pactl -- set-sink-volume @DEFA
 bindsym XF86AudioLowerVolume exec --no-startup-id pactl -- set-sink-volume @DEFAULT_SINK@ -5% #decrease sound volume
 bindsym XF86AudioMute exec --no-startup-id pactl -- set-sink-mute @DEFAULT_SINK@ toggle # mute sound
 
-bindcode 152 exec --no-startup-id $HOME/myrepo/myscripts/bash/rofi/spotify.sh
+bindcode 152 exec --no-startup-id $HOME/myrepo/myscripts/bash/rofi/spotify.sh launch
 
 # change focus
 bindsym $mod+h focus left
@@ -202,6 +203,7 @@ for_window [class="Initiative Tracker" instance="Initiative Tracker"] floating e
 assign [class="discord"] output nonprimary
 assign [class="steam_app_230410"] output primary
 assign [class="steam_app_2183900"] output primary
+assign [class="steam_app_2420110"] output primary
 
 #######################
 #### Themes & Bars ####
